file(GLOB SOURCES "*.cc")
get_filename_component(TEST ${CMAKE_CURRENT_SOURCE_DIR}/test.cc ABSOLUTE)
list(REMOVE_ITEM SOURCES "${TEST}")
get_filename_component(BENCH ${CMAKE_CURRENT_SOURCE_DIR}/bench.cc ABSOLUTE)
list(REMOVE_ITEM SOURCES "${BENCH}")

FOREACH(src ${SOURCES})
    STRING(REGEX REPLACE ".cc\$" "" bin "${src}")
    message(STATUS "${bin}")
    STRING(REGEX REPLACE "\^${CMAKE_SOURCE_DIR}/" "" bin "${bin}")
    message(STATUS "${bin}")
    STRING(REGEX REPLACE "/" "_" bin "${bin}")
    message(STATUS "${bin}")

    set(test "${bin}_test")
    add_executable(${test} ${src} "${TEST}")
    target_link_libraries(${test} ${GTEST_BOTH_LIBRARIES} pthread)
    add_test(${test} ${test})

    if (BENCHMARK_LIBRARIES)
        set(bench "${bin}_bench")
        add_executable(${bench} ${src} "${BENCH}")
        target_link_libraries(${bench} benchmark::benchmark pthread)
        add_test(${bench} ${bench})
    endif(BENCHMARK_LIBRARIES)
ENDFOREACH(src)
